2000-08-23  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/base/NSDecimal.h:
	Use signed char for exponent, as char may be unsigned on some machines
	* Source/NSDecimal.m:
	Corrected some bugs and added a basic implementation based on GMP
	(Still not complete)

2000-08-23  Adam Fedor  <fedor@gnu.org>

	* Source/NSDebug.m (NSFrameAddress): New function
	(NSReturnAddress): Likewise.
	(NSCountFrames): Likewise. (impementation from alex@orderfusion.com).

2000-08-16  Manuel Guesdon <mguesdon@orange-concept.com>

	* Tools/gsdoc-0_6_6.dtd: added conform for category
	* Tools/gsdoc.m: correct bugs and added inter/intra-projects 
		link generations
	* Tools/AutoDocTemplate.gsdoc: correct problems
	* Tools/indextemplate.gsdoc: correct problems
	
2000-08-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDebug.m: Fix memory leak when adding new class to array
	of those being recorded - report by Frederic.De.Jaeger

2000-08-13  Manuel Guesdon <mguesdon@orange-concept.com>

	* Tools/gsdoc.gsdoc: added examples on how to use AutoDoc and GSDoc.
	
2000-08-13  Manuel Guesdon <mguesdon@orange-concept.com>

	* Tools/GNUmakefile: added DocTemplates
	* Tools/Makefile.postamble: added DocTemplates
	* Tools/indextemplate.gsdoc: New file. Use it as template for 
		gsdoc index generation
	* Tools/AutoDocTemplate.gsdoc: New File: Use it as template for AutoDoc
		source-to-documentation generation.
	
2000-08-13  Manuel Guesdon <mguesdon@orange-concept.com>

	* Tools/gsdoc-0_6_6.dtd: added ivariable, constant and stylesheet
	* Tools/gsdoc.m: added ivariable, constant and stylesheet support
		added index generation
	* Tools/gsdoc.gsdoc: added parameters documentation
	
2000-08-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/all.h: Moved to Old as obsolete file.
	* Headers/gnustep/base/Arch: dittoiver.m
	* Headers/gnustep/base/Archiver.h: ditto
	* Headers/gnustep/base/Array.h: ditto
	* Headers/gnustep/base/ArrayPrivate.h: ditto
	* Headers/gnustep/base/Bag.h: ditto